[gd_scene load_steps=15 format=2]

[ext_resource path="res://asset/NanumGothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]
[ext_resource path="res://asset/hpbar_over.png" type="Texture" id=3]
[ext_resource path="res://asset/hpbar_under.png" type="Texture" id=4]
[ext_resource path="res://asset/hpbar_progress.png" type="Texture" id=5]
[ext_resource path="res://asset/spbar_under.png" type="Texture" id=6]
[ext_resource path="res://asset/spbar_progress.png" type="Texture" id=7]
[ext_resource path="res://asset/spbar_over.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 16
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="DeadColor" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 770.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadInfo" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -93.0
margin_right = 360.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dead" type="Label" parent="DeadInfo"]
margin_right = 720.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.576471, 0.0627451, 0.0627451, 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Label" parent="DeadInfo"]
margin_top = 143.0
margin_right = 720.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 2 )
text = "Press R to restart"
align = 1

[node name="Bars" type="VBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_left = -0.24
margin_top = 0.32
margin_right = 547.76
margin_bottom = 100.32
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="HBoxContainer" parent="Bars"]
margin_right = 548.0
margin_bottom = 48.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPTextBG" type="ColorRect" parent="Bars/HP"]
margin_right = 96.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPText" type="Label" parent="Bars/HP/HPTextBG"]
margin_right = 96.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "HP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="TextureProgress" parent="Bars/HP"]
margin_left = 100.0
margin_right = 548.0
margin_bottom = 48.0
value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarText" type="Label" parent="Bars/HP/HPBar"]
margin_right = 446.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bars"]
margin_top = 52.0
margin_right = 548.0
margin_bottom = 88.0
custom_constants/margin_left = 8

[node name="SP" type="HBoxContainer" parent="Bars/MarginContainer"]
margin_left = 8.0
margin_right = 459.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPTextBG" type="ColorRect" parent="Bars/MarginContainer/SP"]
margin_right = 80.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 36 )
color = Color( 0.0313726, 0, 1, 1 )

[node name="SPText" type="Label" parent="Bars/MarginContainer/SP/SPTextBG"]
margin_right = 80.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "SP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPBar" type="TextureProgress" parent="Bars/MarginContainer/SP"]
margin_left = 92.0
margin_right = 451.0
margin_bottom = 36.0
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 7 )

[node name="SPBarText" type="Label" parent="Bars/MarginContainer/SP/SPBar"]
margin_right = 358.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 4 )
text = "100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Node" parent="."]

[node name="WeaponInfoBox" type="VBoxContainer" parent="Labels"]
anchor_left = 0.015
anchor_top = 0.14
anchor_right = 0.015
anchor_bottom = 0.14
margin_left = -0.36
margin_top = 0.479996
margin_right = 164.64
margin_bottom = 98.48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Labels/WeaponInfoBox"]
margin_right = 165.0
margin_bottom = 47.0
custom_constants/separation = 20

[node name="present_weapon" type="Label" parent="Labels/WeaponInfoBox/HBoxContainer"]
margin_bottom = 47.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon_amount" type="Label" parent="Labels/WeaponInfoBox/HBoxContainer"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon_reloading" type="Label" parent="Labels/WeaponInfoBox"]
margin_top = 51.0
margin_right = 165.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingInfoBox" type="VBoxContainer" parent="Labels"]
anchor_left = 1.0
anchor_top = 0.03
anchor_right = 1.0
anchor_bottom = 0.03
margin_left = -277.0
margin_top = -0.039999
margin_bottom = 148.96
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity_x" type="Label" parent="Labels/SettingInfoBox"]
margin_right = 277.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity_y" type="Label" parent="Labels/SettingInfoBox"]
margin_top = 67.0
margin_right = 277.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="is_mobs_active" type="Label" parent="Labels/SettingInfoBox"]
margin_top = 134.0
margin_right = 277.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="Labels/SettingInfoBox"]
margin_top = 201.0
margin_right = 277.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Labels/SettingInfoBox"]
margin_top = 268.0
margin_right = 277.0
margin_bottom = 288.0
custom_constants/separation = 5

[node name="MeleeSummon" type="Button" parent="Labels/SettingInfoBox/HBoxContainer"]
margin_right = 52.0
margin_bottom = 20.0
focus_mode = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
enabled_focus_mode = 0
text = "Melee"

[node name="RangeSummon" type="Button" parent="Labels/SettingInfoBox/HBoxContainer"]
margin_left = 57.0
margin_right = 107.0
margin_bottom = 20.0
focus_mode = 0
size_flags_stretch_ratio = 0.0
enabled_focus_mode = 0
text = "Range"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Labels/SettingInfoBox/HBoxContainer/MeleeSummon" to="." method="_on_MeleeSummon_pressed"]
[connection signal="pressed" from="Labels/SettingInfoBox/HBoxContainer/RangeSummon" to="." method="_on_RangeSummon_pressed"]
